--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,13 +1,20 @@
 // -- MIXINS -- //
 
-@mixin SubcategoryBackgroundColor($category, $color) {
+@mixin SubcategoryBackgroundColor($category, $mainColor) {
     &.#{$category} {
-        .header__subcategories__list {
-            background: $color;
+        .header__subcategories__container {
+            background: $mainColor;
+            .header__subcategories__list--item {
+                background: darken($color: $mainColor, $amount: 7);
+                border: 1px solid darken($color: $mainColor, $amount: 21);
+                &:hover, &.active {
+                    background: darken($color: $mainColor, $amount: 21);
+                }
+            }
         }
         .header__posts__background {
             &::after {
-                background: $color;
+                background: $mainColor;
             }
         }
     }
@@ -109,49 +116,32 @@
         &__container {
             height: calc(100% - 40px);
             top: 0;
+            padding: 10px 10px 0 10px;
+            box-sizing: border-box;
+            @include mQ($phone) {
+                padding: 10px;
+            }
         }
         &__list {
             display: flex;
-            flex-direction: column;
-            height: 100%;
-            justify-content: flex-start;
-            align-items: center;
+            flex-wrap: wrap;
             &--item {
-                box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2);
-                &:last-child {
-                    border-bottom: none;
-                    box-shadow: none;
-                }
-                display: inline-block;
-                height: 20%;
-                display: flex;
-                align-items: center;
-                width: 90%;
+                padding: 5px 10px;
+                box-sizing: border-box;
+                margin: 10px 5px;
+                @include center;
+                border-radius: 30px;
                 .subcategories-title {
+                    box-sizing: border-box;
                     color: $black;
                     position: relative;
-                    width: 90%;
                     font-family: "Roboto-Regular";
                     font-size: 16px;
                     line-height: 19px;
                     letter-spacing: 1px;
                     cursor: pointer;
-                    &:hover, &.active {
-                        color: black;
-                        font-size: 18px;
-                        font-family: "Roboto-Bold";
-                    }
-                    &.active {
-                        padding-left: 25px;
-                        &::before {
-                            content: "";
-                            border-bottom: 3px solid $red;
-                            width: 20px;
-                            height: 18px;
-                            position: absolute;
-                            top: -9px;
-                            left: 0px;
-                        }
+                    a {
+                        box-sizing: border-box;
                     }
                     @include mQ($tablet_portrait) {
                         font-size: 12px;
@@ -160,8 +150,11 @@
                         font-size: 14px;
                     }
                 }
-                @include mQ($phone) {
-                    padding: 5px 0;
+                &:hover, &.active {
+                    .subcategories-title {
+                        color: black;
+                        font-weight: 600;
+                    }
                 }
             }
         }
