--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@
 @import 'about';
 @import 'contact';
 @import './Landing/header.scss';
+@import './Landing/codeless.scss';
 @import './Landing/newPosts.scss';
 @import './Landing/show.scss';
 @import './Landing/quote.scss';
