--- a/src/styles/Landing/header.scss
+++ b/src/styles/Landing/header.scss
@@ -22,6 +22,7 @@
                 color: white;
                 font-size: 12px;
                 letter-spacing: 1px;
+                margin: 10px 0;
             }
             .title {
                 color: white;
