code block w postach

--- a/src/styles/Landing/quote.scss
+++ b/src/styles/Landing/quote.scss
@@ -1,5 +1,5 @@
 .landing-page__quote {
-    background: $footer;
+    background: $dark-grey;
     margin-top: 100px;
     height: 300px;
     display: flex;
