--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -7,10 +7,10 @@ $sidebar-active: rgb(88, 95, 100);
 $grey: #BDBDBD;
 $lighten-grey: lighten($color: $grey, $amount: 15);
 $light-grey: #f9f9f9;
+$dark-grey: #393E41;
 $text: #393E41;
 $black: #212121;
 $red: #EF5350;
-$footer: #393E41;
 
 // category colors
 $js: #FFF9C4;
