--- a/src/styles/blog-markdown.scss
+++ b/src/styles/blog-markdown.scss
@@ -369,11 +369,13 @@ span.float-right > span {
 
 code, tt {
   margin: 0 2px;
-  padding: 0 5px;
+  padding: 2px 10px;
   white-space: nowrap;
   border: 1px solid #eaeaea;
-  background-color: #f8f8f8;
+  background-color: $dark-grey;
+  color: white;
   border-radius: 3px;
+  letter-spacing: 1px;
 }
 
 pre code {
@@ -434,6 +436,7 @@ ul {
 ol {
   list-style: decimal;
 }
+
 
 }
 
