--- a/src/styles/blog-markdown.scss
+++ b/src/styles/blog-markdown.scss
@@ -105,7 +105,7 @@ h6 tt, h6 code {
 
 h1 {
   font-size: 38px;
-  color: black;
+  color: $black;
 }
 
 h2 {
@@ -115,7 +115,8 @@ h2 {
 }
 
 h3 {
-  font-size: 18px;
+  font-size: 24px;
+  color: $black;
 }
 
 h4 {
@@ -434,7 +435,11 @@ ul {
 }
 
 ol {
+  font-size: 20px;
   list-style: decimal;
+  li {
+    line-height: 36px;
+  }
 }
 
 
