--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -47,7 +47,7 @@
                         transition: 0.2s;
                         transform: scale(1.2);
                     }
-                    .mail-ico {
+                    img {
                         width: 50px;
                     }
                 }
