--- a/src/styles/Landing/header.scss
+++ b/src/styles/Landing/header.scss
@@ -57,10 +57,10 @@
                     position: relative;
                     display: flex;
                     flex-wrap: wrap;
+                    background: rgba(0,0,0,0.8);
                     z-index: 1;
                 }
                 &__item {
-                    background: rgba(0,0,0,0.4);
                     position: relative;
                     width: 50%;
                     box-sizing: border-box;
@@ -149,7 +149,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        justify-content: space-evenly;
+        justify-content: flex-start;
         align-items: center;
         background: $lighten-grey;
         &--item {
