--- a/src/styles/Landing/header.scss
+++ b/src/styles/Landing/header.scss
@@ -77,7 +77,7 @@
                         font-size: 17px;
                         font-family: "Roboto-Regular";
                         &:hover {
-                            font-family: "Roboto-Bold";
+                            font-weight: 600;
                         }
                     }
                     .post-image {
