--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -90,6 +90,12 @@
                     a {
                         line-height: 90px;
                     }
+                    @include mQ($tablet_portrait) {
+                        font-size: 50px;
+                        a {
+                            line-height: 70px;
+                        }
+                    }
                 }
             }
             @include mQ($tablet_portrait) {
