--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
 @import 'reset';
+@import './fonts/fonts';
 @import 'mixins';
 @import 'colors';
 @import 'general';
-@import './fonts/fonts';
 @import 'header';
 @import 'topbar';
 @import 'sidebar';
@@ -20,3 +20,4 @@
 @import './Landing/show.scss';
 @import './Landing/quote.scss';
 @import 'footer.scss';
+@import 'toolbox.scss';
