--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -174,6 +174,25 @@
                         font-size: 14px;
                     }
                 }
+                &.toolbox-link {
+                    width: 45%;
+                    border-radius: 0;
+                    border-width: 2px !important;
+                    &::before {
+                        content: '';
+                        width: 17px;
+                        height: 17px;
+                        margin-right: 3px;
+                        background: url(./img/icons/tools.svg);
+                        @include background;
+                    }
+                    @include mQ($tablet_portrait) {
+                        width: 100%;
+                    }
+                    @include mQ($phone) {
+                        width: 45%;
+                    }
+                }
                 &:hover, &.active {
                     .subcategories-title {
                         color: black;
