--- a/src/styles/toolbox.scss
+++ b/src/styles/toolbox.scss
@@ -11,6 +11,10 @@
         background-color: #212121;
         padding: 10px 40px;
     }
+    .header__posts__background::after {
+        bottom: -50px;
+        left: 10%;
+    }
 }
 
 .toolbox {
