sidebar button zmieniony na okragly na mobile

--- a/src/styles/Landing/header.scss
+++ b/src/styles/Landing/header.scss
@@ -98,7 +98,7 @@
                         @include mQ($phone) {
                             position: relative;
                             left: auto;
-                            top: auto;
+                            top: 5px;
                         }
                     }
                     @include mQ($phone) {
