--- a/src/styles/Landing/newPosts.scss
+++ b/src/styles/Landing/newPosts.scss
@@ -1,6 +1,8 @@
 .landing-page__tags {
     &.part1 {
-        margin-top: 80px;
+        @include mQ($phone) {
+            margin-top: 120px;
+        }
     }
     &.part2 {
         margin-top: 100px;
@@ -61,7 +63,7 @@
                     .item {
                         &--title {
                             display: block;
-                            padding: 25% 0 0 5%;
+                            padding: 12% 0 0 5%;
                             font-size: 30px;
                             max-width: 90%;
                             a {
