--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -3,6 +3,7 @@ $desktop: 1800px;
 $tablet_landscape: 1200px;
 $tablet_portrait: 900px;
 $phone: 600px;
+$xsmall: 400px;
 
 html {
   height: calc(100% + 150px);
