--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -13,6 +13,7 @@
             .talks {
                 display: flex;
                 align-items: center;
+                margin-left: 20px;
                 &--button {
                     display: flex;
                     flex-direction: column;
