--- a/src/styles/Landing/newPosts.scss
+++ b/src/styles/Landing/newPosts.scss
@@ -6,6 +6,9 @@
     }
     &.part2 {
         margin-top: 100px;
+        @include mQ($xsmall) {
+            margin-top: 170px;
+        }
     }
     display: flex;
     flex-wrap: wrap;
