--- a/src/styles/Landing/show.scss
+++ b/src/styles/Landing/show.scss
@@ -22,6 +22,9 @@
         }
         &--text {
             width: 45%;
+            @include mQ($tablet_landscape) {
+                width: 50%;
+            }
             @include mQ($tablet_portrait) {
                 width: 100%;
             }
@@ -38,6 +41,9 @@
         }
         &--seeMore {
             padding: 20px 0px;
+        }
+        @include mQ($tablet_landscape) {
+            width: 90%;
         }
         @include mQ($tablet_portrait) {
             width: 100%;
