check browser modal

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import 'blog-markdown';
 @import 'about';
 @import 'contact';
+@import 'detect-browser';
 @import './Landing/header.scss';
 @import './Landing/codeless.scss';
 @import './Landing/newPosts.scss';
