--- a/src/styles/Landing/header.scss
+++ b/src/styles/Landing/header.scss
@@ -1,8 +1,10 @@
 .landing-page__header {
     width: calc( 100vw - 17px);
     height: 50vh;
+    max-height: 400px;
     display: flex;
     position: relative;
+    margin-bottom: 50px;
     .header__posts {
         width: 75%;
         display: flex;
@@ -80,10 +82,19 @@
                         display: flex;
                         align-items: center;
                         position: relative;
-                        font-size: 17px;
+                        font-size: 20px;
+                        line-height: 22px;
                         font-family: "Roboto-Regular";
                         &:hover {
                             font-weight: 600;
+                        }
+                        @include mQ($desktop) {
+                            font-size: 15px;
+                            line-height: 17px;
+                        }
+                        @include mQ($tablet_portrait) {
+                            font-size: 12px;
+                            line-height: 15px;
                         }
                     }
                     .post-image {
@@ -91,17 +102,25 @@
                         height: 63px;
                         margin-right: 5px;
                         @include background;
+                        @include mQ($tablet_portrait) {
+                            min-width: 80px;
+                            height: 50px;
+                        }
                         @include mQ($phone) {
                             display: none;
                         }
                     }
                     .post-date {
                         position: absolute;
-                        top: 15px;
+                        top: 10px;
                         left: 128px;
                         font-size: 10px;
                         color: $grey;
+                        @include mQ($tablet_landscape) {
+                            display: none;
+                        }
                         @include mQ($phone) {
+                            display: initial;
                             position: relative;
                             left: auto;
                             top: 5px;
@@ -135,12 +154,15 @@
             min-height: 70vh;
         }
     }
-    @include mQ($tablet_portrait) {
+    @include mQ($tablet_landscape) {
         height: 80vh;
     }
     @include mQ($phone) {
+        height: calc(80vh + 300px); // 300px = height of news column
+        max-height: initial;
         flex-direction: column;
         width: calc( 100vw );
+        margin-bottom: 0;
     }
 }
 
@@ -150,6 +172,9 @@
     &__container {
         height: calc(100% - 40px);
         top: 0;
+        @include mQ($phone) {
+            height: 300px;
+        }
     }
     &__list {
         display: flex;
@@ -180,7 +205,7 @@
                     cursor: pointer;
                     @include underline(2px, $red);
                     @include mQ($tablet_portrait) {
-                        font-size: 14px;
+                        line-height: 16px;
                     }
                 }
             }
