--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -7,7 +7,7 @@
             position: relative;
             display: flex;
             &--text {
-                width: 70%;
+                width: 80%;
                 padding: 0 20px 20px 20px;
                 font-size: 20px;
                 font-family: "Roboto-Light";
@@ -26,7 +26,7 @@
                 min-width: 400px;
                 height: 400px;
                 background: gray;
-                @include mQ($tablet_portrait) {
+                @include mQ($tablet_landscape) {
                     display: none;
                 }
             }
@@ -43,7 +43,7 @@
         margin-top: 80px;
         .topics {
             margin-top: 30px;
-            width: 100%;
+            width: 80%;
             &__list {
                 display: flex;
                 flex-wrap: wrap;
@@ -56,7 +56,8 @@
                     margin: 5px 5px;
                     box-sizing: border-box;
                     width: calc((100% / 3) - 10px);
-                    height: 400px;
+                    height: auto;
+                    min-height: 400px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
@@ -92,6 +93,9 @@
                         width: 100%;
                     }
                 }
+            }
+            @include mQ($tablet_landscape) {
+                width: 100%;
             }
         }
     }
