--- a/src/styles/blog-markdown.scss
+++ b/src/styles/blog-markdown.scss
@@ -371,12 +371,12 @@ span.float-right > span {
 code, tt {
   margin: 0 2px;
   padding: 2px 10px;
-  white-space: nowrap;
   border: 1px solid #eaeaea;
   background-color: $dark-grey;
   color: white;
   border-radius: 3px;
   letter-spacing: 1px;
+  white-space: initial;
 }
 
 pre code {
