--- a/src/styles/category-page.scss
+++ b/src/styles/category-page.scss
@@ -1,7 +1,6 @@
 .category-page {
     section:not(:first-child)
     {
-        margin-top: 100px;
         margin-left: calc(10% - 20px)
     }
     .recent-posts {
@@ -18,6 +17,9 @@
                     @include mQ($tablet_portrait) {
                         width: 300px;
                         height: 200px;
+                    }
+                    @include mQ($phone) {
+                        display: none;
                     }
                 }
                 &__data {
@@ -43,20 +45,28 @@
                             padding: 0 5px;
                         }
                     }
+                    @include mQ($phone) {
+                        padding: 0;
+                        max-width: initial;
+                    }
                 }
             }
         }
     }
 
     .second-level-posts, .older-posts {
-        margin-top: 20px;
+        padding-top: 20px;
+        margin-left: 10% !important;
         .posts__list {
             width: 75%;
             display: flex;
             flex-wrap: wrap;
             justify-content: flex-start;
             li {
-                margin: 20px 20px;
+                margin: 10px 10px;
+                @include mQ($tablet_portrait) {
+                    margin: 5px;
+                }
             }
             @include mQ($tablet_portrait) {
                 width: 100%;
