--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -37,6 +37,9 @@
                             color: $red;
                         }
                     }
+                    @include mQ($tablet_portrait) {
+                        font-size: 18px;
+                    }
                 }
                 .place {
                     padding: 3px 0;
@@ -58,6 +61,11 @@
                 .desc {
                     font-size: 18px;
                     line-height: 24px;
+                    @include mQ($tablet_portrait) {
+                        font-size: 14px;
+                        line-height: 20px;
+                    }
+
                 }
             }
         }
