--- a/src/styles/toolbox.scss
+++ b/src/styles/toolbox.scss
@@ -10,6 +10,10 @@
         letter-spacing: 1px;
         background-color: #212121;
         padding: 10px 40px;
+        @include mQ($phone) {
+            font-size: 50px;
+        }
+
     }
     .header__posts__background::after {
         bottom: -50px;
